examples/test/testpolicy387.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy387
  namespace: namespace404
spec:
  podSelector:
    matchLabels:
      key40: value30
      key38: value33
      key18: value36
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key10: value48
          key25: value41
          key35: value34
      podSelector:
        matchLabels:
          key6: value2
